--- a/config_generator_hyperupgrades/hu_attributes.cfg
+++ b/config_generator_hyperupgrades/hu_attributes.cfg
@@ -31,12 +31,13 @@
 				"6"	"*Increase Player Capture Value"
 				"7"	"*Cancel Falling Damage"
 				"8"	"*Parachute Attribute"
-				"9"	"*Drop Health Pack On Kill"
-				"10"	"*Airblast Vulnerability Multiplier"
-				"11"	"*Airblast Vertical Vulnerability Multiplier"
-				"12"	"*Damage Force Reduction"
-				"13"	"*Gesture Speed Increase"
-				"14"	"*Mod See Enemy Health"
+				"9"	"*Redeployable Parachute"
+				"10"	"*Drop Health Pack On Kill"
+				"11"	"*Airblast Vulnerability Multiplier"
+				"12"	"*Airblast Vertical Vulnerability Multiplier"
+				"13"	"*Damage Force Reduction"
+				"14"	"*Gesture Speed Increase"
+				"15"	"*Mod See Enemy Health"
 			}
 			"Ammo Upgrades"
 			{
@@ -73,12 +74,13 @@
 				"5"	"*Increase Player Capture Value"
 				"6"	"*Cancel Falling Damage"
 				"7"	"*Parachute Attribute"
-				"8"	"*Drop Health Pack On Kill"
-				"9"	"*Airblast Vulnerability Multiplier"
-				"10"	"*Airblast Vertical Vulnerability Multiplier"
-				"11"	"*Damage Force Reduction"
-				"12"	"*Gesture Speed Increase"
-				"13"	"*Mod See Enemy Health"
+				"8"	"*Redeployable Parachute"
+				"9"	"*Drop Health Pack On Kill"
+				"10"	"*Airblast Vulnerability Multiplier"
+				"11"	"*Airblast Vertical Vulnerability Multiplier"
+				"12"	"*Damage Force Reduction"
+				"13"	"*Gesture Speed Increase"
+				"14"	"*Mod See Enemy Health"
 			}
 			"Ammo Upgrades"
 			{
@@ -115,12 +117,13 @@
 				"5"	"*Increase Player Capture Value"
 				"6"	"*Cancel Falling Damage"
 				"7"	"*Parachute Attribute"
-				"8"	"*Drop Health Pack On Kill"
-				"9"	"*Airblast Vulnerability Multiplier"
-				"10"	"*Airblast Vertical Vulnerability Multiplier"
-				"11"	"*Damage Force Reduction"
-				"12"	"*Gesture Speed Increase"
-				"13"	"*Mod See Enemy Health"
+				"8"	"*Redeployable Parachute"
+				"9"	"*Drop Health Pack On Kill"
+				"10"	"*Airblast Vulnerability Multiplier"
+				"11"	"*Airblast Vertical Vulnerability Multiplier"
+				"12"	"*Damage Force Reduction"
+				"13"	"*Gesture Speed Increase"
+				"14"	"*Mod See Enemy Health"
 			}
 			"Ammo Upgrades"
 			{
@@ -157,12 +160,13 @@
 				"5"	"*Increase Player Capture Value"
 				"6"	"*Cancel Falling Damage"
 				"7"	"*Parachute Attribute"
-				"8"	"*Drop Health Pack On Kill"
-				"9"	"*Airblast Vulnerability Multiplier"
-				"10"	"*Airblast Vertical Vulnerability Multiplier"
-				"11"	"*Damage Force Reduction"
-				"12"	"*Gesture Speed Increase"
-				"13"	"*Mod See Enemy Health"
+				"8"	"*Redeployable Parachute"
+				"9"	"*Drop Health Pack On Kill"
+				"10"	"*Airblast Vulnerability Multiplier"
+				"11"	"*Airblast Vertical Vulnerability Multiplier"
+				"12"	"*Damage Force Reduction"
+				"13"	"*Gesture Speed Increase"
+				"14"	"*Mod See Enemy Health"
 			}
 			"Ammo Upgrades"
 			{
@@ -199,12 +203,13 @@
 				"5"	"*Increase Player Capture Value"
 				"6"	"*Cancel Falling Damage"
 				"7"	"*Parachute Attribute"
-				"8"	"*Drop Health Pack On Kill"
-				"9"	"*Airblast Vulnerability Multiplier"
-				"10"	"*Airblast Vertical Vulnerability Multiplier"
-				"11"	"*Damage Force Reduction"
-				"12"	"*Gesture Speed Increase"
-				"13"	"*Mod See Enemy Health"
+				"8"	"*Redeployable Parachute"
+				"9"	"*Drop Health Pack On Kill"
+				"10"	"*Airblast Vulnerability Multiplier"
+				"11"	"*Airblast Vertical Vulnerability Multiplier"
+				"12"	"*Damage Force Reduction"
+				"13"	"*Gesture Speed Increase"
+				"14"	"*Mod See Enemy Health"
 			}
 			"Ammo Upgrades"
 			{
@@ -241,12 +246,13 @@
 				"5"	"*Increase Player Capture Value"
 				"6"	"*Cancel Falling Damage"
 				"7"	"*Parachute Attribute"
-				"8"	"*Drop Health Pack On Kill"
-				"9"	"*Airblast Vulnerability Multiplier"
-				"10"	"*Airblast Vertical Vulnerability Multiplier"
-				"11"	"*Damage Force Reduction"
-				"12"	"*Gesture Speed Increase"
-				"13"	"*Mod See Enemy Health"
+				"8"	"*Redeployable Parachute"
+				"9"	"*Drop Health Pack On Kill"
+				"10"	"*Airblast Vulnerability Multiplier"
+				"11"	"*Airblast Vertical Vulnerability Multiplier"
+				"12"	"*Damage Force Reduction"
+				"13"	"*Gesture Speed Increase"
+				"14"	"*Mod See Enemy Health"
 			}
 			"Ammo Upgrades"
 			{
@@ -299,12 +305,13 @@
 				"5"	"*Increase Player Capture Value"
 				"6"	"*Cancel Falling Damage"
 				"7"	"*Parachute Attribute"
-				"8"	"*Drop Health Pack On Kill"
-				"9"	"*Airblast Vulnerability Multiplier"
-				"10"	"*Airblast Vertical Vulnerability Multiplier"
-				"11"	"*Damage Force Reduction"
-				"12"	"*Gesture Speed Increase"
-				"13"	"*Mod See Enemy Health"
+				"8"	"*Redeployable Parachute"
+				"9"	"*Drop Health Pack On Kill"
+				"10"	"*Airblast Vulnerability Multiplier"
+				"11"	"*Airblast Vertical Vulnerability Multiplier"
+				"12"	"*Damage Force Reduction"
+				"13"	"*Gesture Speed Increase"
+				"14"	"*Mod See Enemy Health"
 			}
 			"Ammo Upgrades"
 			{
@@ -341,12 +348,13 @@
 				"5"	"*Increase Player Capture Value"
 				"6"	"*Cancel Falling Damage"
 				"7"	"*Parachute Attribute"
-				"8"	"*Drop Health Pack On Kill"
-				"9"	"*Airblast Vulnerability Multiplier"
-				"10"	"*Airblast Vertical Vulnerability Multiplier"
-				"11"	"*Damage Force Reduction"
-				"12"	"*Gesture Speed Increase"
-				"13"	"*Mod See Enemy Health"
+				"8"	"*Redeployable Parachute"
+				"9"	"*Drop Health Pack On Kill"
+				"10"	"*Airblast Vulnerability Multiplier"
+				"11"	"*Airblast Vertical Vulnerability Multiplier"
+				"12"	"*Damage Force Reduction"
+				"13"	"*Gesture Speed Increase"
+				"14"	"*Mod See Enemy Health"
 			}
 			"Ammo Upgrades"
 			{
@@ -383,12 +391,13 @@
 				"5"	"*Increase Player Capture Value"
 				"6"	"*Cancel Falling Damage"
 				"7"	"*Parachute Attribute"
-				"8"	"*Drop Health Pack On Kill"
-				"9"	"*Airblast Vulnerability Multiplier"
-				"10"	"*Airblast Vertical Vulnerability Multiplier"
-				"11"	"*Damage Force Reduction"
-				"12"	"*Gesture Speed Increase"
-				"13"	"*Mod See Enemy Health"
+				"8"	"*Redeployable Parachute"
+				"9"	"*Drop Health Pack On Kill"
+				"10"	"*Airblast Vulnerability Multiplier"
+				"11"	"*Airblast Vertical Vulnerability Multiplier"
+				"12"	"*Damage Force Reduction"
+				"13"	"*Gesture Speed Increase"
+				"14"	"*Mod See Enemy Health"
 			}
 			"Ammo Upgrades"
 			{
