--- a/config_generator_hyperupgrades/hu_upgrades.cfg
+++ b/config_generator_hyperupgrades/hu_upgrades.cfg
@@ -4775,6 +4775,15 @@
 		"Alias"	"parachute_attribute"
 		"InitValue"	"0"
 	}
+	"*Redeployable Parachute"
+	{
+		"Cost"	"100"
+		"CostIncrease"	"50"
+		"Increment"	"1"
+		"Limit"	"1"
+		"Alias"	"CUSTOM_parachute_redeploy"
+		"InitValue"	"0"
+	}
 	"*Particle Effect Use Head Origin"
 	{
 		"Cost"	"10"
