--- a/config_generator_hyperupgrades/hu_attributes.cfg
+++ b/config_generator_hyperupgrades/hu_attributes.cfg
@@ -33,11 +33,26 @@
 				"8"	"*Parachute Attribute"
 				"9"	"*Redeployable Parachute"
 				"10"	"*Drop Health Pack On Kill"
-				"11"	"*Airblast Vulnerability Multiplier"
-				"12"	"*Airblast Vertical Vulnerability Multiplier"
+				"11"	"*Airblast Vuln Mult"
+				"12"	"*Airblast Z Vuln Mult"
 				"13"	"*Damage Force Reduction"
 				"14"	"*Gesture Speed Increase"
 				"15"	"*Mod See Enemy Health"
+			}
+			"Elemental Protection"
+			{
+				"1"	"*Slash Dmg Mult"
+				"2"	"*Shock Dmg Mult"
+				"3"	"*Sonic Dmg Mult"
+				"4"	"*Acid Dmg Mult"
+				"5"	"*Poison Dmg Mult"
+				"6"	"*Radiation Dmg Mult"
+				"7"	"*Drown Dmg Mult"
+				"8"	"*Paralyze Dmg Mult"
+				"9"	"*Nervegas Dmg Mult"
+				"10"	"*Plasma Dmg Mult"
+				"11"	"*Energybeam Dmg Mult"
+				"12"	"*Dissolve Dmg Mult"
 			}
 			"Ammo Upgrades"
 			{
@@ -76,11 +91,26 @@
 				"7"	"*Parachute Attribute"
 				"8"	"*Redeployable Parachute"
 				"9"	"*Drop Health Pack On Kill"
-				"10"	"*Airblast Vulnerability Multiplier"
-				"11"	"*Airblast Vertical Vulnerability Multiplier"
+				"10"	"*Airblast Vuln Mult"
+				"11"	"*Airblast Z Vuln Mult"
 				"12"	"*Damage Force Reduction"
 				"13"	"*Gesture Speed Increase"
 				"14"	"*Mod See Enemy Health"
+			}
+			"Elemental Protection"
+			{
+				"1"	"*Slash Dmg Mult"
+				"2"	"*Shock Dmg Mult"
+				"3"	"*Sonic Dmg Mult"
+				"4"	"*Acid Dmg Mult"
+				"5"	"*Poison Dmg Mult"
+				"6"	"*Radiation Dmg Mult"
+				"7"	"*Drown Dmg Mult"
+				"8"	"*Paralyze Dmg Mult"
+				"9"	"*Nervegas Dmg Mult"
+				"10"	"*Plasma Dmg Mult"
+				"11"	"*Energybeam Dmg Mult"
+				"12"	"*Dissolve Dmg Mult"
 			}
 			"Ammo Upgrades"
 			{
@@ -119,11 +149,26 @@
 				"7"	"*Parachute Attribute"
 				"8"	"*Redeployable Parachute"
 				"9"	"*Drop Health Pack On Kill"
-				"10"	"*Airblast Vulnerability Multiplier"
-				"11"	"*Airblast Vertical Vulnerability Multiplier"
+				"10"	"*Airblast Vuln Mult"
+				"11"	"*Airblast Z Vuln Mult"
 				"12"	"*Damage Force Reduction"
 				"13"	"*Gesture Speed Increase"
 				"14"	"*Mod See Enemy Health"
+			}
+			"Elemental Protection"
+			{
+				"1"	"*Slash Dmg Mult"
+				"2"	"*Shock Dmg Mult"
+				"3"	"*Sonic Dmg Mult"
+				"4"	"*Acid Dmg Mult"
+				"5"	"*Poison Dmg Mult"
+				"6"	"*Radiation Dmg Mult"
+				"7"	"*Drown Dmg Mult"
+				"8"	"*Paralyze Dmg Mult"
+				"9"	"*Nervegas Dmg Mult"
+				"10"	"*Plasma Dmg Mult"
+				"11"	"*Energybeam Dmg Mult"
+				"12"	"*Dissolve Dmg Mult"
 			}
 			"Ammo Upgrades"
 			{
@@ -162,11 +207,26 @@
 				"7"	"*Parachute Attribute"
 				"8"	"*Redeployable Parachute"
 				"9"	"*Drop Health Pack On Kill"
-				"10"	"*Airblast Vulnerability Multiplier"
-				"11"	"*Airblast Vertical Vulnerability Multiplier"
+				"10"	"*Airblast Vuln Mult"
+				"11"	"*Airblast Z Vuln Mult"
 				"12"	"*Damage Force Reduction"
 				"13"	"*Gesture Speed Increase"
 				"14"	"*Mod See Enemy Health"
+			}
+			"Elemental Protection"
+			{
+				"1"	"*Slash Dmg Mult"
+				"2"	"*Shock Dmg Mult"
+				"3"	"*Sonic Dmg Mult"
+				"4"	"*Acid Dmg Mult"
+				"5"	"*Poison Dmg Mult"
+				"6"	"*Radiation Dmg Mult"
+				"7"	"*Drown Dmg Mult"
+				"8"	"*Paralyze Dmg Mult"
+				"9"	"*Nervegas Dmg Mult"
+				"10"	"*Plasma Dmg Mult"
+				"11"	"*Energybeam Dmg Mult"
+				"12"	"*Dissolve Dmg Mult"
 			}
 			"Ammo Upgrades"
 			{
@@ -205,11 +265,26 @@
 				"7"	"*Parachute Attribute"
 				"8"	"*Redeployable Parachute"
 				"9"	"*Drop Health Pack On Kill"
-				"10"	"*Airblast Vulnerability Multiplier"
-				"11"	"*Airblast Vertical Vulnerability Multiplier"
+				"10"	"*Airblast Vuln Mult"
+				"11"	"*Airblast Z Vuln Mult"
 				"12"	"*Damage Force Reduction"
 				"13"	"*Gesture Speed Increase"
 				"14"	"*Mod See Enemy Health"
+			}
+			"Elemental Protection"
+			{
+				"1"	"*Slash Dmg Mult"
+				"2"	"*Shock Dmg Mult"
+				"3"	"*Sonic Dmg Mult"
+				"4"	"*Acid Dmg Mult"
+				"5"	"*Poison Dmg Mult"
+				"6"	"*Radiation Dmg Mult"
+				"7"	"*Drown Dmg Mult"
+				"8"	"*Paralyze Dmg Mult"
+				"9"	"*Nervegas Dmg Mult"
+				"10"	"*Plasma Dmg Mult"
+				"11"	"*Energybeam Dmg Mult"
+				"12"	"*Dissolve Dmg Mult"
 			}
 			"Ammo Upgrades"
 			{
@@ -248,11 +323,26 @@
 				"7"	"*Parachute Attribute"
 				"8"	"*Redeployable Parachute"
 				"9"	"*Drop Health Pack On Kill"
-				"10"	"*Airblast Vulnerability Multiplier"
-				"11"	"*Airblast Vertical Vulnerability Multiplier"
+				"10"	"*Airblast Vuln Mult"
+				"11"	"*Airblast Z Vuln Mult"
 				"12"	"*Damage Force Reduction"
 				"13"	"*Gesture Speed Increase"
 				"14"	"*Mod See Enemy Health"
+			}
+			"Elemental Protection"
+			{
+				"1"	"*Slash Dmg Mult"
+				"2"	"*Shock Dmg Mult"
+				"3"	"*Sonic Dmg Mult"
+				"4"	"*Acid Dmg Mult"
+				"5"	"*Poison Dmg Mult"
+				"6"	"*Radiation Dmg Mult"
+				"7"	"*Drown Dmg Mult"
+				"8"	"*Paralyze Dmg Mult"
+				"9"	"*Nervegas Dmg Mult"
+				"10"	"*Plasma Dmg Mult"
+				"11"	"*Energybeam Dmg Mult"
+				"12"	"*Dissolve Dmg Mult"
 			}
 			"Ammo Upgrades"
 			{
@@ -307,11 +397,26 @@
 				"7"	"*Parachute Attribute"
 				"8"	"*Redeployable Parachute"
 				"9"	"*Drop Health Pack On Kill"
-				"10"	"*Airblast Vulnerability Multiplier"
-				"11"	"*Airblast Vertical Vulnerability Multiplier"
+				"10"	"*Airblast Vuln Mult"
+				"11"	"*Airblast Z Vuln Mult"
 				"12"	"*Damage Force Reduction"
 				"13"	"*Gesture Speed Increase"
 				"14"	"*Mod See Enemy Health"
+			}
+			"Elemental Protection"
+			{
+				"1"	"*Slash Dmg Mult"
+				"2"	"*Shock Dmg Mult"
+				"3"	"*Sonic Dmg Mult"
+				"4"	"*Acid Dmg Mult"
+				"5"	"*Poison Dmg Mult"
+				"6"	"*Radiation Dmg Mult"
+				"7"	"*Drown Dmg Mult"
+				"8"	"*Paralyze Dmg Mult"
+				"9"	"*Nervegas Dmg Mult"
+				"10"	"*Plasma Dmg Mult"
+				"11"	"*Energybeam Dmg Mult"
+				"12"	"*Dissolve Dmg Mult"
 			}
 			"Ammo Upgrades"
 			{
@@ -350,11 +455,26 @@
 				"7"	"*Parachute Attribute"
 				"8"	"*Redeployable Parachute"
 				"9"	"*Drop Health Pack On Kill"
-				"10"	"*Airblast Vulnerability Multiplier"
-				"11"	"*Airblast Vertical Vulnerability Multiplier"
+				"10"	"*Airblast Vuln Mult"
+				"11"	"*Airblast Z Vuln Mult"
 				"12"	"*Damage Force Reduction"
 				"13"	"*Gesture Speed Increase"
 				"14"	"*Mod See Enemy Health"
+			}
+			"Elemental Protection"
+			{
+				"1"	"*Slash Dmg Mult"
+				"2"	"*Shock Dmg Mult"
+				"3"	"*Sonic Dmg Mult"
+				"4"	"*Acid Dmg Mult"
+				"5"	"*Poison Dmg Mult"
+				"6"	"*Radiation Dmg Mult"
+				"7"	"*Drown Dmg Mult"
+				"8"	"*Paralyze Dmg Mult"
+				"9"	"*Nervegas Dmg Mult"
+				"10"	"*Plasma Dmg Mult"
+				"11"	"*Energybeam Dmg Mult"
+				"12"	"*Dissolve Dmg Mult"
 			}
 			"Ammo Upgrades"
 			{
@@ -393,11 +513,26 @@
 				"7"	"*Parachute Attribute"
 				"8"	"*Redeployable Parachute"
 				"9"	"*Drop Health Pack On Kill"
-				"10"	"*Airblast Vulnerability Multiplier"
-				"11"	"*Airblast Vertical Vulnerability Multiplier"
+				"10"	"*Airblast Vuln Mult"
+				"11"	"*Airblast Z Vuln Mult"
 				"12"	"*Damage Force Reduction"
 				"13"	"*Gesture Speed Increase"
 				"14"	"*Mod See Enemy Health"
+			}
+			"Elemental Protection"
+			{
+				"1"	"*Slash Dmg Mult"
+				"2"	"*Shock Dmg Mult"
+				"3"	"*Sonic Dmg Mult"
+				"4"	"*Acid Dmg Mult"
+				"5"	"*Poison Dmg Mult"
+				"6"	"*Radiation Dmg Mult"
+				"7"	"*Drown Dmg Mult"
+				"8"	"*Paralyze Dmg Mult"
+				"9"	"*Nervegas Dmg Mult"
+				"10"	"*Plasma Dmg Mult"
+				"11"	"*Energybeam Dmg Mult"
+				"12"	"*Dissolve Dmg Mult"
 			}
 			"Ammo Upgrades"
 			{
@@ -541,8 +676,9 @@
 				"5"	"*Damage Blast Push"
 				"6"	"*Mod Mini-crit Airborne"
 				"7"	"*Dmg Falloff Decreased"
-				"8"	"*Reveal Cloaked Victim On Hit"
-				"9"	"*Reveal Disguised Victim On Hit"
+				"8"	"*Guided Nuke"
+				"9"	"*Reveal Cloaked Victim On Hit"
+				"10"	"*Reveal Disguised Victim On Hit"
 			}
 			"Specific Upgrades"
 			{
@@ -657,6 +793,7 @@
 				"4"	"*Airblast Pushback Scale"
 				"5"	"*Flame Speed"
 				"6"	"*Flame Up Speed"
+				"7"	"*Hellfire"
 			}
 		}
 		"tf_weapon_phlog"
@@ -730,13 +867,17 @@
 		}
 		"tf_boots_demo"
 		{
+			"Damage Upgrades"
+			{
+				"1"	"*Charge Impact Damage Increased"
+				"2"	"*No Charge Impact Range"
+			}
 			"Specific Upgrades"
 			{
 				"1"	"*Max Health Bonus (H)"
 				"2"	"*Rocket Jump Damage Reduction"
 				"3"	"*Mult Charge Turn Control (B)"
-				"4"	"*Charge Impact Damage Decreased"
-				"5"	"*Charge Recharge Rate Increased"
+				"4"	"*Charge Recharge Rate Increased"
 			}
 		}
 		"tf_weapon_cannon"
@@ -887,6 +1028,27 @@
 				"5"	"*Projectile Speed Increased"
 			}
 		}
+		"tf_weapon_drg_pomson"
+		{
+			"Damage Upgrades"
+			{
+				"1"	"*Damage Bonus"
+				"2"	"*Set Damagetype Ignite"
+				"3"	"*Weapon Burn Dmg Increased"
+				"4"	"*Weapon Burn Time Increased"
+				"5"	"*Heal On Hit For Rapidfire"
+				"6"	"*Heal On Kill"
+				"7"	"*Slow Enemy On Hit Major"
+				"8"	"*Reveal Cloaked Victim On Hit"
+				"9"	"*Reveal Disguised Victim On Hit"
+			}
+			"Specific Upgrades"
+			{
+				"1"	"*Fire Rate Bonus"
+				"2"	"*Faster Reload Rate"
+				"3"	"*Projectile Speed Increased"
+			}
+		}
 		"tf_weapon_syringegun_medic"
 		{
 			"Damage Upgrades"
@@ -949,13 +1111,13 @@
 			}
 			"Specific Upgrades"
 			{
-				"1"	"*Fire Rate Bonus"
+				"1"	"*Fire Rate Bonus (Min)"
 				"2"	"*Sniper Charge Per Sec"
-				"3"	"*Mult Sniper Charge After Headshot"
+				"3"	"*Mult Charge After Headshot"
 				"4"	"*Bullets Per Shot Bonus (S)"
 				"5"	"*Weapon Spread Bonus"
-				"6"	"*Sniper Penetrate Players When Charged"
-				"7"	"*Sniper Aiming Movespeed Increased"
+				"6"	"*Penetrate When Charged"
+				"7"	"*Aim Movespeed Increased (S)"
 			}
 		}
 		"tf_weapon_compound_bow"
@@ -963,27 +1125,25 @@
 			"Damage Upgrades"
 			{
 				"1"	"*Damage Bonus"
-				"2"	"*Sniper Full Charge Damage Bonus"
-				"3"	"*Headshot Damage Increase"
-				"4"	"*Set Damagetype Ignite"
-				"5"	"*Weapon Burn Dmg Increased"
-				"6"	"*Weapon Burn Time Increased"
-				"7"	"*Bleeding Duration"
-				"8"	"*Heal On Hit For Rapidfire"
-				"9"	"*Heal On Kill"
-				"10"	"*Slow Enemy On Hit"
-				"11"	"*Dmg Falloff Decreased"
-				"12"	"*Reveal Cloaked Victim On Hit"
-				"13"	"*Reveal Disguised Victim On Hit"
+				"2"	"*Headshot Damage Increase"
+				"3"	"*Set Damagetype Ignite"
+				"4"	"*Weapon Burn Dmg Increased"
+				"5"	"*Weapon Burn Time Increased"
+				"6"	"*Bleeding Duration"
+				"7"	"*Heal On Hit For Rapidfire"
+				"8"	"*Heal On Kill"
+				"9"	"*Slow Enemy On Hit"
+				"10"	"*Dmg Falloff Decreased"
+				"11"	"*Reveal Cloaked Victim On Hit"
+				"12"	"*Reveal Disguised Victim On Hit"
 			}
 			"Specific Upgrades"
 			{
 				"1"	"*Fire Rate Bonus"
 				"2"	"*Faster Reload Rate (B)"
-				"3"	"*Sniper Aiming Movespeed Decreased"
-				"4"	"*Projectile Penetration Heavy"
-				"5"	"*Sniper Aiming Movespeed Increased"
-				"6"	"*Projectile Speed Increased"
+				"3"	"*Projectile Penetration Heavy"
+				"4"	"*Aim Movespeed Increased (S)"
+				"5"	"*Projectile Speed Increased"
 			}
 		}
 		"tf_weapon_revolver"
@@ -1153,9 +1313,8 @@
 			{
 				"1"	"*Fire Rate Bonus"
 				"2"	"*Faster Reload Rate"
-				"3"	"*Clip Size Bonus"
-				"4"	"*Weapon Spread Bonus"
-				"5"	"*Projectile Penetration"
+				"3"	"*Weapon Spread Bonus"
+				"4"	"*Projectile Penetration"
 			}
 		}
 		"tf_weapon_buff_item"
@@ -1283,7 +1442,7 @@
 		{
 			"Specific Upgrades"
 			{
-				"1"	"*Thermal Thruster Increased Recharge Rate"
+				"1"	"*Jetpack Charge Speed"
 				"2"	"*Thermal Thruster Air Launch"
 				"3"	"*Falling Impact Radius Pushback"
 				"4"	"*Falling Impact Radius Stun"
@@ -1304,7 +1463,7 @@
 				"7"	"*Dmg Falloff Decreased"
 				"8"	"*Reveal Cloaked Victim On Hit"
 				"9"	"*Reveal Disguised Victim On Hit"
-				"10"	"*Stickybomb Charge Damage Increase"
+				"10"	"*Sticky Charge DMG Mod"
 			}
 			"Specific Upgrades"
 			{
@@ -1322,15 +1481,25 @@
 		}
 		"tf_wearable_demoshield"
 		{
+			"Damage Upgrades"
+			{
+				"1"	"*Charge Impact Damage Increased"
+				"2"	"*Set Damagetype Ignite"
+				"3"	"*Weapon Burn Dmg Increased"
+				"4"	"*Bleeding Duration"
+				"5"	"*Minicritboost On Kill"
+				"6"	"*Explosive Charge"
+			}
 			"Specific Upgrades"
 			{
 				"1"	"*Blast Resistance (L)"
 				"2"	"*Fire Resistance (L)"
-				"3"	"*Mult Charge Turn Control (B)"
-				"4"	"*Charge Impact Damage Decreased"
-				"5"	"*Charge Recharge Rate Increased"
-				"6"	"*Charge Time Increased"
-				"7"	"*Charge Time Decreased"
+				"3"	"*Mult Charge Turn Control (S)"
+				"4"	"*Charge Recharge Rate Increased"
+				"5"	"*Charge Time Increased"
+				"6"	"*Charge Time Decreased"
+				"7"	"*Damage Force Reduction (S)"
+				"8"	"*No Self Blast Dmg"
 			}
 		}
 		"tf_weapon_shotgun_hwg"
@@ -1401,13 +1570,12 @@
 			"Specific Upgrades"
 			{
 				"1"	"*Fire Rate Bonus"
-				"2"	"*Faster Reload Rate"
-				"3"	"*No Self Blast Dmg"
-				"4"	"*More Velocity On Damage"
-				"5"	"*Damage Causes Airblast"
-				"6"	"*Crit Resistance (L)"
-				"7"	"*Mod Ammo Per Shot (C)"
-				"8"	"*Projectile Speed Increased"
+				"2"	"*No Self Blast Dmg"
+				"3"	"*More Velocity On Damage"
+				"4"	"*Damage Causes Airblast"
+				"5"	"*Crit Resistance (L)"
+				"6"	"*Mod Ammo Per Shot (C)"
+				"7"	"*Projectile Speed Increased"
 			}
 		}
 		"tf_weapon_medigun"
@@ -1421,7 +1589,26 @@
 				"5"	"*Overheal Decay Disabled"
 				"6"	"*Damage bonus vs player (S)"
 				"7"	"*Shield Level"
-				"8"	"*Medigun Leech Beam"
+			}
+			"Specific Upgrades"
+			{
+				"1"	"*Ubercharge Rate Bonus"
+				"2"	"*Uber Duration Bonus"
+				"3"	"*Preserve Ubercharge"
+			}
+		}
+		"tf_weapon_quickfix"
+		{
+			"Healing & Damage Upgrades"
+			{
+				"1"	"*Heal Rate Bonus"
+				"2"	"*Healing Mastery"
+				"3"	"*Overheal Bonus"
+				"4"	"*Overheal Mastery"
+				"5"	"*Overheal Decay Disabled"
+				"6"	"*Damage bonus vs player (S)"
+				"7"	"*Shield Level"
+				"8"	"*MediLeecher (bypass quickfix)"
 			}
 			"Specific Upgrades"
 			{
@@ -1440,7 +1627,6 @@
 				"4"	"*Overheal Decay Disabled"
 				"5"	"*Damage bonus vs player (S)"
 				"6"	"*Shield Level"
-				"7"	"*Medigun Leech Beam"
 			}
 			"Specific Upgrades"
 			{
@@ -1704,7 +1890,7 @@
 				"6"	"*Set Damagetype Ignite"
 				"7"	"*Weapon Burn Dmg Increased"
 				"8"	"*Weapon Burn Time Increased"
-				"9"	"*Dmg Bonus Vs Buildings"
+				"9"	"*Dmg Bonus Vs Buildings (Mel)"
 				"10"	"*Reveal Cloaked Victim On Hit"
 				"11"	"*Reveal Disguised Victim On Hit"
 			}
@@ -1796,7 +1982,7 @@
 		{
 			"Damage Upgrades"
 			{
-				"1"	"*Dmg Penalty Vs Players"
+				"1"	"*Damage Bonus"
 				"2"	"*Heal On Hit For Rapidfire"
 				"3"	"*Heal On Kill"
 				"4"	"*Slow Enemy On Hit"
@@ -1813,6 +1999,7 @@
 				"5"	"*Crit From Behind"
 				"6"	"*Speed Buff Ally"
 				"7"	"*Mark For Death"
+				"8"	"*No Self Blast Dmg"
 			}
 		}
 		"tf_weapon_fists"
@@ -1841,7 +2028,7 @@
 			"Damage Upgrades"
 			{
 				"1"	"*Damage Bonus"
-				"2"	"*Dmg Bonus Vs Buildings"
+				"2"	"*Dmg Bonus Vs Buildings (Mel)"
 				"3"	"*Heal On Hit For Rapidfire"
 				"4"	"*Heal On Kill"
 				"5"	"*Slow Enemy On Hit"
@@ -1869,7 +2056,7 @@
 			"Damage Upgrades"
 			{
 				"1"	"*Damage Bonus"
-				"2"	"*Dmg Bonus Vs Buildings"
+				"2"	"*Dmg Bonus Vs Buildings (Mel)"
 				"3"	"*Heal On Hit For Rapidfire"
 				"4"	"*Heal On Kill"
 				"5"	"*Slow Enemy On Hit"
