--- a/config_generator_hyperupgrades/hu_upgrades.cfg
+++ b/config_generator_hyperupgrades/hu_upgrades.cfg
@@ -310,7 +310,7 @@
 		"Increment"	"0.1"
 		"Alias"	"airblast_vertical_pushback_scale"
 	}
-	"*Airblast Vertical Vulnerability Multiplier"
+	"*Airblast Z Vuln Mult"
 	{
 		"Cost"	"20"
 		"CostIncrease"	"10"
@@ -319,7 +319,7 @@
 		"Alias"	"airblast_vertical_vulnerability_multiplier"
 		"InitValue"	"1"
 	}
-	"*Airblast Vulnerability Multiplier"
+	"*Airblast Vuln Mult"
 	{
 		"Cost"	"10"
 		"CostIncrease"	"10"
@@ -328,7 +328,7 @@
 		"Alias"	"airblast_vulnerability_multiplier"
 		"InitValue"	"1"
 	}
-	"*Airblast Vulnerability Multiplier Hidden"
+	"*Airblast Vuln Mult Hidden"
 	{
 		"Cost"	"10"
 		"CostIncrease"	"5"
@@ -492,10 +492,10 @@
 	}
 	"*Attack Projectiles"
 	{
-		"Cost"	"40"
-		"CostIncrease"	"20"
+		"Cost"	"100"
+		"CostIncrease"	"y"
 		"Increment"	"1"
-		"Limit"	"1"
+		"Limit"	"4"
 		"Alias"	"attack_projectiles"
 		"InitValue"	"0"
 	}
@@ -868,7 +868,9 @@
 		"Cost"	"10"
 		"CostIncrease"	"5"
 		"Increment"	"0.1"
+		"Limit"	"0"
 		"Alias"	"charge_impact_damage_decreased"
+		"InitValue"	"1"
 	}
 	"*Charge Impact Damage Increased"
 	{
@@ -901,8 +903,8 @@
 	{
 		"Cost"	"20"
 		"CostIncrease"	"15"
-		"Increment"	"0.5"
-		"Limit"	"10"
+		"Increment"	"-0.5"
+		"Limit"	"-2"
 		"Alias"	"charge_time_decreased"
 		"InitValue"	"1"
 	}
@@ -914,6 +916,24 @@
 		"Limit"	"10"
 		"Alias"	"charge_time_increased"
 		"InitValue"	"1"
+	}
+	"*Kaboom Charge"
+	{
+		"Cost"	"500"
+		"CostIncrease"	"50"
+		"Increment"	"1"
+		"Limit"	"1"
+		"Alias"	"CUSTOM_exploding_shield_bash"
+		"InitValue"	"0"
+	}
+	"*Explosive Charge"
+	{
+		"Cost"	"500"
+		"CostIncrease"	"50"
+		"Increment"	"1"
+		"Limit"	"5"
+		"Alias"	"CUSTOM_explosive_charge"
+		"InitValue"	"0"
 	}
 	"*Charged Airblast"
 	{
@@ -1399,8 +1419,17 @@
 	{
 		"Cost"	"20"
 		"CostIncrease"	"20"
-		"Increment"	"-0.1"
-		"Limit"	"0.02"
+		"Increment"	"-0.5"
+		"Limit"	"0.05"
+		"Alias"	"damage_force_reduction"
+		"InitValue"	"1"
+	}
+	"*Damage Force Reduction (S)"
+	{
+		"Cost"	"20"
+		"CostIncrease"	"20"
+		"Increment"	"-0.5"
+		"Limit"	"0.01"
 		"Alias"	"damage_force_reduction"
 		"InitValue"	"1"
 	}
@@ -1539,6 +1568,15 @@
 		"Increment"	"0.1"
 		"Alias"	"display_duck_leaderboard"
 	}
+	"*Dmg Bonus Vs Buildings (Mel)"
+	{
+		"Cost"	"40"
+		"CostIncrease"	"16"
+		"Increment"	"0.5"
+		"Limit"	"500"
+		"Alias"	"dmg_bonus_vs_buildings"
+		"InitValue"	"1"
+	}
 	"*Dmg Bonus Vs Buildings"
 	{
 		"Cost"	"40"
@@ -1593,8 +1631,8 @@
 	}
 	"*Dmg From Ranged Reduced"
 	{
-		"Cost"	"75"
-		"CostIncrease"	"90"
+		"Cost"	"50"
+		"CostIncrease"	"70"
 		"Increment"	"-0.05"
 		"Limit"	"0.15"
 		"Alias"	"dmg_from_ranged_reduced"
@@ -1652,7 +1690,7 @@
 	{
 		"Cost"	"200"
 		"CostIncrease"	"100"
-		"Increment"	"0.5"
+		"Increment"	"0.25"
 		"Limit"	"7500"
 		"Alias"	"dmg_penalty_vs_players"
 		"InitValue"	"1"
@@ -1790,11 +1828,218 @@
 	}
 	"*Dmg Taken Reduced"
 	{
-		"Cost"	"90"
-		"CostIncrease"	"120"
+		"Cost"	"60"
+		"CostIncrease"	"80"
 		"Increment"	"-0.05"
 		"Limit"	"0.15"
 		"Alias"	"dmg_taken_increased"
+		"InitValue"	"1"
+	}
+	"*Generic Dmg Mult"
+	{
+		"Cost"	"50"
+		"CostIncrease"	"50"
+		"Increment"	"-0.2"
+		"Limit"	"0.5"
+		"Alias"	"CUSTOM_generic_dmg_mult"
+		"InitValue"	"1"
+	}
+	"*Crit Dmg Mult"
+	{
+		"Cost"	"50"
+		"CostIncrease"	"50"
+		"Increment"	"-0.2"
+		"Limit"	"0.5"
+		"Alias"	"CUSTOM_crit_dmg_mult"
+		"InitValue"	"1"
+	}
+	"*Bullet Dmg Mult"
+	{
+		"Cost"	"50"
+		"CostIncrease"	"50"
+		"Increment"	"-0.2"
+		"Limit"	"0.5"
+		"Alias"	"CUSTOM_bullet_dmg_mult"
+		"InitValue"	"1"
+	}
+	"*Slash Dmg Mult"
+	{
+		"Cost"	"50"
+		"CostIncrease"	"50"
+		"Increment"	"-0.2"
+		"Limit"	"0.5"
+		"Alias"	"CUSTOM_slash_dmg_mult"
+		"InitValue"	"1"
+	}
+	"*Burn Dmg Mult"
+	{
+		"Cost"	"50"
+		"CostIncrease"	"50"
+		"Increment"	"-0.2"
+		"Limit"	"0.5"
+		"Alias"	"CUSTOM_burn_dmg_mult"
+		"InitValue"	"1"
+	}
+	"*Club Dmg Mult"
+	{
+		"Cost"	"50"
+		"CostIncrease"	"50"
+		"Increment"	"-0.2"
+		"Limit"	"0.5"
+		"Alias"	"CUSTOM_club_dmg_mult"
+		"InitValue"	"1"
+	}
+	"*Shock Dmg Mult"
+	{
+		"Cost"	"50"
+		"CostIncrease"	"50"
+		"Increment"	"-0.2"
+		"Limit"	"0.75"
+		"Alias"	"CUSTOM_shock_dmg_mult"
+		"InitValue"	"1"
+	}
+	"*Sonic Dmg Mult"
+	{
+		"Cost"	"50"
+		"CostIncrease"	"50"
+		"Increment"	"-0.2"
+		"Limit"	"0.25"
+		"Alias"	"CUSTOM_sonic_dmg_mult"
+		"InitValue"	"1"
+	}
+	"*Blast Dmg Mult"
+	{
+		"Cost"	"50"
+		"CostIncrease"	"50"
+		"Increment"	"-0.2"
+		"Limit"	"0.5"
+		"Alias"	"CUSTOM_blast_dmg_mult"
+		"InitValue"	"1"
+	}
+	"*Acid Dmg Mult"
+	{
+		"Cost"	"50"
+		"CostIncrease"	"50"
+		"Increment"	"-0.2"
+		"Limit"	"0.75"
+		"Alias"	"CUSTOM_acid_dmg_mult"
+		"InitValue"	"1"
+	}
+	"*Poison Dmg Mult"
+	{
+		"Cost"	"50"
+		"CostIncrease"	"50"
+		"Increment"	"-0.2"
+		"Limit"	"0.75"
+		"Alias"	"CUSTOM_poison_dmg_mult"
+		"InitValue"	"1"
+	}
+	"*Radiation Dmg Mult"
+	{
+		"Cost"	"50"
+		"CostIncrease"	"50"
+		"Increment"	"-0.2"
+		"Limit"	"0.75"
+		"Alias"	"CUSTOM_radiation_dmg_mult"
+		"InitValue"	"1"
+	}
+	"*Drown Dmg Mult"
+	{
+		"Cost"	"50"
+		"CostIncrease"	"50"
+		"Increment"	"-0.2"
+		"Limit"	"0.25"
+		"Alias"	"CUSTOM_drown_dmg_mult"
+		"InitValue"	"1"
+	}
+	"*Paralyze Dmg Mult"
+	{
+		"Cost"	"50"
+		"CostIncrease"	"50"
+		"Increment"	"-0.2"
+		"Limit"	"0.25"
+		"Alias"	"CUSTOM_paralyze_dmg_mult"
+		"InitValue"	"1"
+	}
+	"*Nervegas Dmg Mult"
+	{
+		"Cost"	"50"
+		"CostIncrease"	"50"
+		"Increment"	"-0.2"
+		"Limit"	"0.25"
+		"Alias"	"CUSTOM_nervegas_dmg_mult"
+		"InitValue"	"1"
+	}
+	"*Slowburn Dmg Mult"
+	{
+		"Cost"	"50"
+		"CostIncrease"	"50"
+		"Increment"	"-0.2"
+		"Limit"	"0.9"
+		"Alias"	"CUSTOM_slowburn_dmg_mult"
+		"InitValue"	"1"
+	}
+	"*Plasma Dmg Mult"
+	{
+		"Cost"	"50"
+		"CostIncrease"	"50"
+		"Increment"	"-0.2"
+		"Limit"	"0.75"
+		"Alias"	"CUSTOM_plasma_dmg_mult"
+		"InitValue"	"1"
+	}
+	"*Airboat Dmg Mult"
+	{
+		"Cost"	"50"
+		"CostIncrease"	"50"
+		"Increment"	"-0.2"
+		"Limit"	"0.5"
+		"Alias"	"CUSTOM_airboat_dmg_mult"
+		"InitValue"	"1"
+	}
+	"*Dissolve Dmg Mult"
+	{
+		"Cost"	"50"
+		"CostIncrease"	"50"
+		"Increment"	"-0.2"
+		"Limit"	"0.25"
+		"Alias"	"CUSTOM_dissolve_dmg_mult"
+		"InitValue"	"1"
+	}
+	"*Prevent_physics_force Dmg Mult"
+	{
+		"Cost"	"50"
+		"CostIncrease"	"50"
+		"Increment"	"-0.2"
+		"Limit"	"0.75"
+		"Alias"	"CUSTOM_prevent_physics_force_dmg_mult"
+		"InitValue"	"1"
+	}
+	"*Nevergib Dmg Mult"
+	{
+		"Cost"	"50"
+		"CostIncrease"	"50"
+		"Increment"	"-0.2"
+		"Limit"	"0.8"
+		"Alias"	"CUSTOM_nevergib_dmg_mult"
+		"InitValue"	"1"
+	}
+	"*Alwaysgib Dmg Mult"
+	{
+		"Cost"	"50"
+		"CostIncrease"	"50"
+		"Increment"	"-0.2"
+		"Limit"	"0.8"
+		"Alias"	"CUSTOM_alwaysgib_dmg_mult"
+		"InitValue"	"1"
+	}
+	"*Energybeam Dmg Mult"
+	{
+		"Cost"	"50"
+		"CostIncrease"	"50"
+		"Increment"	"-0.2"
+		"Limit"	"0.25"
+		"Alias"	"CUSTOM_energybeam_dmg_mult"
 		"InitValue"	"1"
 	}
 	"*Dragons Fury Negative Properties"
@@ -2004,8 +2249,8 @@
 	}
 	"*Engy Disposable Sentries"
 	{
-		"Cost"	"50"
-		"CostIncrease"	"25"
+		"Cost"	"100"
+		"CostIncrease"	"50"
 		"Increment"	"1"
 		"Limit"	"3"
 		"Alias"	"engy_disposable_sentries"
@@ -2175,7 +2420,7 @@
 		"Cost"	"40"
 		"CostIncrease"	"20"
 		"Increment"	"-0.1"
-		"Limit"	"0.21"
+		"Limit"	"0.25"
 		"Alias"	"fire_rate_bonus"
 		"InitValue"	"1"
 	}
@@ -2312,16 +2557,25 @@
 	"*Flame Life Penalty"
 	{
 		"Cost"	"10"
-		"CostIncrease"	"5"
-		"Increment"	"0.1"
+		"CostIncrease"	"0"
+		"Increment"	"-100"
 		"Alias"	"flame_life_penalty"
+		"InitValue"	"1"
 	}
-	"*Flame Lifetime"
+	"*Flame Lifetime +"
 	{
 		"Cost"	"25"
 		"CostIncrease"	"12"
 		"Increment"	"0.25"
 		"Limit"	"5"
+		"Alias"	"flame_lifetime"
+		"InitValue"	"1"
+	}
+	"*Flame Lifetime -"
+	{
+		"Cost"	"10"
+		"CostIncrease"	"0"
+		"Increment"	"-0.25"
 		"Alias"	"flame_lifetime"
 		"InitValue"	"1"
 	}
@@ -2364,6 +2618,15 @@
 		"Increment"	"0.1"
 		"Alias"	"flame_size_penalty"
 	}
+	"*Flame No Speed"
+	{
+		"Cost"	"50"
+		"CostIncrease"	"100"
+		"Increment"	"-1"
+		"Limit"	"0"
+		"Alias"	"flame_speed"
+		"InitValue"	"1"
+	}
 	"*Flame Speed"
 	{
 		"Cost"	"50"
@@ -2388,6 +2651,15 @@
 		"Limit"	"1000"
 		"Alias"	"flame_up_speed"
 		"InitValue"	"0"
+	}
+	"*Flame No Up Speed"
+	{
+		"Cost"	"50"
+		"CostIncrease"	"50"
+		"Increment"	"-1"
+		"Limit"	"0"
+		"Alias"	"flame_up_speed"
+		"InitValue"	"1"
 	}
 	"*Force Center Wrap"
 	{
@@ -3554,7 +3826,7 @@
 	{
 		"Cost"	"200"
 		"CostIncrease"	"5"
-		"Increment"	"0.1"
+		"Increment"	"1"
 		"Limit"	"1"
 		"Alias"	"mark_for_death"
 		"InitValue"	"0"
@@ -3563,8 +3835,10 @@
 	{
 		"Cost"	"10"
 		"CostIncrease"	"5"
-		"Increment"	"0.1"
+		"Increment"	"-1"
+		"Limit"	"0"
 		"Alias"	"mark_for_death_on_building_pickup"
+		"InitValue"	"1"
 	}
 	"*Max Flame Reflection Count"
 	{
@@ -3797,13 +4071,22 @@
 		"Alias"	"medigun_fire_resist_passive"
 		"InitValue"	"0.85"
 	}
+	"*MediLeecher (bypass quickfix)"
+	{
+		"Cost"	"100"
+		"CostIncrease"	"10"
+		"Increment"	"0.5"
+		"Limit"	"1000"
+		"Alias"	"CUSTOM_leecher"
+		"InitValue"	"0"
+	}
 	"*Medigun Leech Beam"
 	{
-		"Cost"	"500"
-		"CostIncrease"	"70"
-		"Increment"	"50"
+		"Cost"	"100"
+		"CostIncrease"	"20"
+		"Increment"	"0.25"
 		"Limit"	"1000"
-		"Alias"	"CUSTOM_medigun_drains_health"
+		"Alias"	"CUSTOM_leecher"
 		"InitValue"	"0"
 	}
 	"*Melee Attack Rate Bonus"
@@ -3895,6 +4178,15 @@
 		"Increment"	"1"
 		"Limit"	"1"
 		"Alias"	"mini_rockets"
+		"InitValue"	"0"
+	}
+	"*Guided Nuke"
+	{
+		"Cost"	"400"
+		"CostIncrease"	"200"
+		"Increment"	"1"
+		"Limit"	"10"
+		"Alias"	"CUSTOM_guided_nuke"
 		"InitValue"	"0"
 	}
 	"*Minicrit Boost Charge Rate"
@@ -4051,6 +4343,15 @@
 		"Limit"	"1"
 		"Alias"	"CUSTOM_oil_replaces_airblast"
 		"InitValue"	"0"
+	}
+	"*Hellfire"
+	{
+		"Cost"	"100"
+		"CostIncrease"	"200"
+		"Increment"	"0.25"
+		"Limit"	"2.5"
+		"Alias"	"CUSTOM_hellfire_ring"
+		"InitValue"	"0.5"
 	}
 	"*Mod Flamethrower Back Crit"
 	{
@@ -4426,7 +4727,7 @@
 		"Alias"	"mult_item_meter_charge_rate"
 		"InitValue"	"1"
 	}
-	"*Thermal Thruster Increased Recharge Rate"
+	"*Jetpack Charge Speed"
 	{
 		"Cost"	"50"
 		"CostIncrease"	"10"
@@ -4476,7 +4777,7 @@
 		"Increment"	"0.1"
 		"Alias"	"mult_player_movespeed_active"
 	}
-	"*Mult Sniper Charge After Bodyshot"
+	"*Mult Charge After Bodyshot"
 	{
 		"Cost"	"50"
 		"CostIncrease"	"25"
@@ -4485,7 +4786,7 @@
 		"Alias"	"mult_sniper_charge_after_bodyshot"
 		"InitValue"	"1"
 	}
-	"*Mult Sniper Charge After Headshot"
+	"*Mult Charge After Headshot"
 	{
 		"Cost"	"20"
 		"CostIncrease"	"10"
@@ -4503,7 +4804,7 @@
 		"Alias"	"mult_sniper_charge_after_miss"
 		"InitValue"	"1"
 	}
-	"*Mult Sniper Charge Penalty Display Only"
+	"*Mult  Charge Penalty Display Only"
 	{
 		"Cost"	"10"
 		"CostIncrease"	"5"
@@ -4526,10 +4827,10 @@
 	}
 	"*Multiple Sentries"
 	{
-		"Cost"	"80"
+		"Cost"	"1000"
 		"CostIncrease"	"40"
 		"Increment"	"1"
-		"Limit"	"4"
+		"Limit"	"1"
 		"Alias"	"multiple_sentries"
 		"InitValue"	"0"
 	}
@@ -5864,7 +6165,7 @@
 		"Alias"	"slow_enemy_on_hit_major"
 		"InitValue"	"0"
 	}
-	"*Sniper Aiming Movespeed Increased"
+	"*Aim Movespeed Increased (S)"
 	{
 		"Cost"	"20"
 		"CostIncrease"	"5"
@@ -5949,7 +6250,7 @@
 		"Alias"	"sniper_only_fire_zoomed"
 		"InitValue"	"1"
 	}
-	"*Sniper Penetrate Players When Charged"
+	"*Penetrate When Charged"
 	{
 		"Cost"	"20"
 		"CostIncrease"	"10"
@@ -6174,7 +6475,7 @@
 		"Alias"	"sticky_detonate_mode"
 		"InitValue"	"0"
 	}
-	"*Stickybomb Charge Damage Increase"
+	"*Sticky Charge DMG Mod"
 	{
 		"Cost"	"80"
 		"CostIncrease"	"40"
